Updated Final Model

--- a/DSC80_Final.ipynb
+++ b/DSC80_Final.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: tabulate in c:\\users\\charl\\miniforge3\\envs\\dsc80\\lib\\site-packages (0.9.0)\n",
+      "Requirement already satisfied: tabulate in /opt/anaconda3/envs/dsc80/lib/python3.12/site-packages (0.9.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import FunctionTransformer\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -609,15 +610,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Frequency Distribution of Climate Regions\n",
-    "The bar plot above describes the frequency of power outages across different climate regions. \n",
+    "#### Frequency Distribution of Cause of Outages\n",
+    "The bar plot above describes the frequency of different causes of power outages.\n",
     "\n",
     "From the plot we can see that:\n",
-    "- The South and West regions experience the most frequent outages. \n",
-    "- The North Central region experiecnes the least amount of outages.\n",
-    "- There is a notable difference in outage frequency across the climate regions, possibly suggesting that climate may play a role in power outage occurrences.\n",
+    "- Severe weather is the most common cause of power outages, occurring significantly more frequently than any other cause.\n",
+    "- Intentional attacks and system operability disruptions also contribute to outages but at a much lower frequency.\n",
+    "- Fuel supply emergencies, public appeals, and islanding are among the least frequent causes of outages.\n",
     "\n",
-    "This analysis shows that climate may be a significant factor that we should consider when predicting power outage durations. "
+    "Through this analysis, we can see that severe weather is a leading cause of power outages, indicating that weather-related factors play a crucial role in outage occurrences."
    ]
   },
   {
@@ -1041,7 +1042,7 @@
    "source": [
     "#### Pivot Table: Mean Outage Duration by Climate Region and Cause Category\n",
     "\n",
-    "This pivot table shows the average outage duration grouped by climate region and cause category.\n",
+    "This pivot table shows the average outage duration grouped by climate region and cause category. The table helps to identify trends adn variations in outage durations based noo geographic location and the underlying cause of the outage. \n",
     "\n",
     "Key observations:\n",
     "- East North Central region has the highest outage duration for equipment failures (26,435 hours).\n",
@@ -1263,7 +1264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusions\n",
+    "#### Hypothesis Test 1: Permutation Test for Cause Category and Outage Duration\n",
     "- P-value"
    ]
   },
@@ -1321,7 +1322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Hypothesis Test 1: Kruskal-Wallis Test for Outage Duration Across Cause Categories \n",
+    "#### Hypothesis Test 2: Kruskal-Wallis Test for Outage Duration Across Cause Categories \n",
     "\n",
     "For this hypothesis test:\n",
     "- Null hypothesis (H0): The median outage duration is the same across all categories.\n",
@@ -1411,8 +1412,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error (MSE): 26061252.588553462\n",
-      "R² Score: 0.007262598756508032\n"
+      "Mean Squared Error (MSE): 26061252.55965856\n",
+      "R² Score: 0.007262599857186136\n"
      ]
     }
    ],
@@ -1450,9 +1451,10 @@
     "#### Chosen Model: Linear Regression with a Pipeline\n",
     "For our baseline model, we chose to implement a Linear Regression model using an sklearn Pipeline, to ensure that all preprocessing steps such as encoding categorical variables were integrated within our training steps. \n",
     "\n",
-    "Features Used\n",
-    "Our model uses the following two categorical features to predict the duration of outages. \n",
-    "- CAUSE.CATEGORY (INomial, Categorical)\n",
+    "##### Features Used\n",
+    "\n",
+    "Our model uses the following two categorical features to predict the duration of outages:\n",
+    "- CAUSE.CATEGORY (Nomial, Categorical)\n",
     "    - Represents the general cause of the power outage, such as severe weather, equipment failure, intentional attack, etc. \n",
     "    - Encoding Method: One-hot encoding, since there is no order among these categories. \n",
     "- CLIMATE.REGION (Nominal, Categorical)\n",
@@ -1460,17 +1462,19 @@
     "    - Encoding Method: One-hot encoding, since there is no order among these categories. \n",
     "\n",
     "\n",
-    "\n",
     "#### Encoding and Model Training\n",
     "- One-hot encoding was applied to the categorical variables, as mentioned above using a ColumnTransformer. \n",
-    "- We split the dataset into training (80%) and testing (20%) sets to evaluate model generalization. \n",
+    "- We split the dataset into training (80%) and testing (20%) sets to evaluate model generalization.\n",
+    "- The final pipeline consists of\n",
+    "    - Preprocessing step: One-hot encoding of categorical features\n",
+    "    - Regressoin: Linear Regression to predict OUTAGE.DURATION \n",
     "\n",
     "#### Baseline Model Performance and Assessment\n",
     "After training and evaluating our baseline model on the test set, we obtained the following results:\n",
-    "- Mean Squared Error (MSE): 26,048,690.64\n",
-    "- $R^2$ Score: 0.0077\n",
+    "- Mean Squared Error (MSE): 26,061,252.55965856\n",
+    "- $R^2$ Score: 0.007262599857186136\n",
     "\n",
-    "The baseline model’s low R2 score of 0.0077 shows that it does not do a good job of explaining the variance in outage durations. This suggests that additional features may be needed to improve our model’s performance. Some limitations of our baseline model include limited feature selection and the complex relationship between our chosen features and outage duration. The baseline model only considers CAUSE.CATEGORY and CLIMATE.REGION, which do not account for other potential predictive features such as DEMAND.LOSS.MW and CUSTOMERS.AFFECTED. The performance of our model suggests that outage duration is likely influenced by multiple interacting factors, which this baseline model currently fails to capture. In addition to the lack of necessary features, power outages and their durations may not follow a simple linear relationship."
+    "The baseline model’s low $R^2$ score of 0.0077 shows that it does not do a good job of explaining the variance in outage durations. This suggests that additional features may be needed to improve our model’s performance. Some limitations of our baseline model include limited feature selection and the complex relationship between our chosen features and outage duration. The baseline model only considers CAUSE.CATEGORY and CLIMATE.REGION, which do not account for other potential predictive features such as DEMAND.LOSS.MW and CUSTOMERS.AFFECTED. The performance of our model suggests that outage duration is likely influenced by multiple interacting factors, which this baseline model currently fails to capture. In addition to the lack of necessary features, power outages and their durations may not follow a simple linear relationship."
    ]
   },
   {
@@ -1482,67 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-10-31T23:36:28.662099Z",
-     "start_time": "2019-10-31T23:36:28.660016Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      MONTH  DEMAND.LOSS.MW  CUSTOMERS.AFFECTED  DEMAND_PER_CUSTOMER  \\\n",
-      "1       7.0           168.0             70000.0             2.40e-03   \n",
-      "2       5.0           168.0             70135.0             2.40e-03   \n",
-      "3      10.0           168.0             70000.0             2.40e-03   \n",
-      "...     ...             ...                 ...                  ...   \n",
-      "1532    8.0            84.0             70135.0             1.20e-03   \n",
-      "1533    8.0           373.0             70135.0             5.32e-03   \n",
-      "1534    6.0            35.0             14273.0             2.45e-03   \n",
-      "\n",
-      "      LOG_DEMAND_LOSS  \n",
-      "1                5.13  \n",
-      "2                5.13  \n",
-      "3                5.13  \n",
-      "...               ...  \n",
-      "1532             4.44  \n",
-      "1533             5.92  \n",
-      "1534             3.58  \n",
-      "\n",
-      "[1534 rows x 5 columns]\n",
-      "1       3060.0\n",
-      "2          1.0\n",
-      "3       3000.0\n",
-      "         ...  \n",
-      "1532      59.0\n",
-      "1533     181.0\n",
-      "1534     221.0\n",
-      "Name: OUTAGE.DURATION, Length: 1534, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Feature Engineering\n",
-    "outages['DEMAND_PER_CUSTOMER'] = outages['DEMAND.LOSS.MW'] / outages['CUSTOMERS.AFFECTED']\n",
-    "outages['LOG_DEMAND_LOSS'] = np.log(outages['DEMAND.LOSS.MW'] + 1)\n",
-    "outages.replace([np.inf, -np.inf], np.nan, inplace=True) # Makes sure any outliers and infinite values are removed\n",
-    "features = ['MONTH', 'DEMAND.LOSS.MW', 'CUSTOMERS.AFFECTED', 'DEMAND_PER_CUSTOMER', 'LOG_DEMAND_LOSS']\n",
-    "features += [col for col in outages.columns if 'CAUSE.CATEGORY_' in col]\n",
-    "features += [col for col in outages.columns if 'CLIMATE.REGION_' in col]\n",
-    "\n",
-    "X = outages[features]\n",
-    "y = outages['OUTAGE.DURATION']\n",
-    "print(X)\n",
-    "print(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1550,20 +1494,43 @@
      "output_type": "stream",
      "text": [
       "Best Degree: 1\n",
-      "Mean Squared Error (MSE): 24966319.612382747\n",
-      "R² Score: 0.04897129689394675\n"
+      "Mean Squared Error (MSE): 25941331.59266683\n",
+      "R² Score: 0.01183068532128484\n"
      ]
     }
    ],
    "source": [
-    "# Training the model\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# Feature Engineering\n",
+    "def create_demand_per_customer(X):\n",
+    "    return (X['DEMAND.LOSS.MW'] / X['CUSTOMERS.AFFECTED'].replace(0, np.nan)).values.reshape(-1, 1)\n",
+    "\n",
+    "def create_log_demand_loss(X):\n",
+    "    return np.log(X['DEMAND.LOSS.MW'] + 1).values.reshape(-1, 1)\n",
+    "\n",
+    "features = ['MONTH', 'DEMAND.LOSS.MW', 'CUSTOMERS.AFFECTED']\n",
+    "categoricalfeatures = [col for col in outages.columns if 'CAUSE.CATEGORY_' in col or 'CLIMATE.REGION_' in col]\n",
+    "\n",
+    "# Training Model\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('demand_per_customer', FunctionTransformer(create_demand_per_customer), ['DEMAND.LOSS.MW', 'CUSTOMERS.AFFECTED']),\n",
+    "        ('log_demand_loss', FunctionTransformer(create_log_demand_loss), ['DEMAND.LOSS.MW']),\n",
+    "        ('categorical', 'passthrough', categoricalfeatures)  \n",
+    "    ],\n",
+    "    remainder='drop' \n",
+    ")\n",
     "\n",
     "pipeline = Pipeline([\n",
-    "    ('imputer', SimpleImputer(strategy='median')),\n",
-    "    ('poly', PolynomialFeatures(degree=2)),\n",
-    "    ('linear', LinearRegression())\n",
+    "    ('preprocessor', preprocessor),  \n",
+    "    ('imputer', SimpleImputer(strategy='median')),  \n",
+    "    ('poly', PolynomialFeatures()), \n",
+    "    ('linear', LinearRegression()) \n",
     "])\n",
+    "\n",
+    "X = outages[features + categoricalfeatures].copy()\n",
+    "y = outages['OUTAGE.DURATION']\n",
+    "X.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "param_grid = {\n",
     "    'poly__degree': [1, 2, 3]\n",
@@ -1594,8 +1561,9 @@
     "- Addition of New Features\n",
     "    - DEMAND.LOSS.MW (Megawatts lost due to outage): A key indicator of outage severity. \n",
     "    - CUSTOMERS.AFFECTED (Number of customers affected by the outage): Higher value could indicate longer restoration times, as more people are affected.\n",
-    "    - DEMAND_PER_CUSTOMER (Ratio of demand loss per customer): Captures the outage impact per customer\n",
-    "    - LOG_DEMAND_LOSS (Log-transformed demand loss): Put in place to normalize skewed data for better regression analysis\n",
+    "    - DEMAND_PER_CUSTOMER (Ratio of demand loss per customer): Captures the outage impact per customer.\n",
+    "    - LOG_DEMAND_LOSS (Log-transformed demand loss): Put in place to make the data more suitable for regression analysis. \n",
+    "        - Computed as log(DEMAND.LOSS.MW + 1)\n",
     "    - MONTH (Month in which the outage occurred): Captures the seasonal patterns affecting the outage duration. \n",
     "- Handling Missing Values\n",
     "    - We used median imputation to handle missing values in DEMAND.LOSS.MW and CUSTOMERS.AFFECTED to ensure consistency within our dataset.\n",
@@ -1604,15 +1572,26 @@
     "    - We applied Polynomial Regression to capture non-linear relationships in the data, rather than using a simple Linear Regression model. \n",
     "    - We used PolynomialFeatures() within an sklearn Pipeline to generate the polynomial terms.\n",
     "- Hyperparameter Tuning\n",
-    "    - We used GridSearchCV to find the best polynomial degree (poly_degree), testing values of 1, 2, and 3. \n",
-    "    - The best-performing model had a degree of 2, which suggests that a quadratic relationship best fits our dataset. \n",
+    "    - We applied GridSearchCV with 5-fold cross-validation and neg_mean_squared_error as our scoring metric.\n",
+    "        - poly_degree: Is the degree of polynomial features, we decided to test values of 1, 2, and 3 to determine the best fit for the data. \n",
+    "    - The best-performing model had a polynomial degree of 1, which suggests that a linear relationship best fits our dataset.\n",
+    "\n",
+    "#### Justification of Feature Engineering\n",
+    "##### Demand_Per_Customer:\n",
+    "This feature was created to capture the per-customer impact of an outage. Outages affecting fewer customers but with high demand loss may be prioritized differently by utility companies, resulting in shorter restoration times. By including this feature, the model would better account for the relationship between demand loss and outage duration. \n",
+    "\n",
+    "##### Log_Demand_Loss:\n",
+    "The log transformation was applied in order to account for the skewness in the DEMAND.LOSS.MW column. Larger outages are not as frequent in this dataset, but can still disproportionately affect the model’s performance. By applying this transformation, we can reduce the influence of these outliers making the data more suitable for regression analysis. \n",
+    "\n",
+    "##### MONTH and Categorical Features:\n",
+    "These features were included to account for seasonal patterns and regions differences in outage durations and causes. Outages caused by storms for instance, could take longer to restore than outages caused by equipment failure. \n",
     "\n",
     "#### Final Model Performance Assessment\n",
     "After training and evaluating our final model on the test set, we obtained the following results:\n",
-    "- Mean Squared Error (MSE): 24388385.35\n",
-    "- R2 Score: 0.071\n",
+    "- Mean Squared Error (MSE): 25,941,331.59266683\n",
+    "- $R^2$ Score: 0.01183\n",
     "\n",
-    "Although the R2 score is still relatively low, we can see a noticeable improvement compared to the results from our baseline model (MSE: 26,048,690.64, R²: 0.0077). The decrease in our MSE value indicates that the model’s predictions are closer to the actual outage durations than before, meaning the model has better accuracy. The increase in our R2 score suggests that the model captures more variance in outage duration, although there is still a significant amount of unexplained variance, indicating that additional features or a different modeling approach could further improve our performance. "
+    "Although the $R^2$ score is still relatively low, we can see a noticeable improvement compared to the results from our baseline model (MSE: 26,061,252.56, R²: 0.0077). The decrease in our MSE value indicates that the model’s predictions are closer to the actual outage durations than before, meaning the model has better accuracy. The increase in our $R^2$ score suggests that the model captures more variance in outage duration, although there is still a significant amount of unexplained variance, indicating that additional features or a different modeling approach could further improve our performance. "
    ]
   },
   {
