Final Updated Version of ipynb

--- a/DSC80_Final.ipynb
+++ b/DSC80_Final.ipynb
@@ -433,13 +433,133 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>U.S._STATE</th>\n",
+       "      <th>CLIMATE.REGION</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AREAPCT_UC</th>\n",
+       "      <th>PCT_LAND</th>\n",
+       "      <th>PCT_WATER_TOT</th>\n",
+       "      <th>PCT_WATER_INLAND</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>91.59266587</td>\n",
+       "      <td>8.407334131</td>\n",
+       "      <td>5.478742983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>91.59266587</td>\n",
+       "      <td>8.407334131</td>\n",
+       "      <td>5.478742983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>91.59266587</td>\n",
+       "      <td>8.407334131</td>\n",
+       "      <td>5.478742983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>91.59266587</td>\n",
+       "      <td>8.407334131</td>\n",
+       "      <td>5.478742983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>East North Central</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>91.59266587</td>\n",
+       "      <td>8.407334131</td>\n",
+       "      <td>5.478742983</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     YEAR  MONTH U.S._STATE      CLIMATE.REGION  ... AREAPCT_UC     PCT_LAND  \\\n",
+       "1  2011.0    7.0  Minnesota  East North Central  ...        0.6  91.59266587   \n",
+       "2  2014.0    5.0  Minnesota  East North Central  ...        0.6  91.59266587   \n",
+       "3  2010.0   10.0  Minnesota  East North Central  ...        0.6  91.59266587   \n",
+       "4  2012.0    6.0  Minnesota  East North Central  ...        0.6  91.59266587   \n",
+       "5  2015.0    7.0  Minnesota  East North Central  ...        0.6  91.59266587   \n",
+       "\n",
+       "  PCT_WATER_TOT PCT_WATER_INLAND  \n",
+       "1   8.407334131      5.478742983  \n",
+       "2   8.407334131      5.478742983  \n",
+       "3   8.407334131      5.478742983  \n",
+       "4   8.407334131      5.478742983  \n",
+       "5   8.407334131      5.478742983  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# HEAD of DF\n",
     "\n",
     "outages.head()\n",
-    "# print(outages.head().to_markdown(index=False))\n",
-    "outages.to_html(\"outages.html\", index=False)"
+    "# print(outages.head().to_markdown(index=False))"
    ]
   },
   {
@@ -484,7 +604,7 @@
     "              title='Frequency Distribution of Causes of Outages',\n",
     "              labels={'index': 'Cause Category', 'value': 'Frequency'})\n",
     "univariate1.show()\n",
-    "univariate1.write_html(\"univariate1.html\")"
+    "# univariate1.write_html(\"univariate1.html\")"
    ]
   },
   {
@@ -529,7 +649,7 @@
     "univariate2 = px.box(outages, y='OUTAGE.DURATION', title='Box Plot of Outage Duration',\n",
     "              labels={'outage_duration': 'Outage Duration (hours)'})\n",
     "univariate2.show()\n",
-    "univariate2.write_html(\"univariate2.html\")"
+    "# univariate2.write_html(\"univariate2.html\")"
    ]
   },
   {
@@ -590,7 +710,7 @@
     "              title='Outage Duration by Climate Region Boxplot',\n",
     "              labels={'climate_region': 'Climate Region', 'outage_duration': 'Outage Duration (hours)'})\n",
     "bivariate1.show()\n",
-    "bivariate1.write_html(\"bivariate1.html\")"
+    "# bivariate1.write_html(\"bivariate1.html\")"
    ]
   },
   {
@@ -637,7 +757,7 @@
     "                title='Outage Duration by Climate Region Scatterplot',\n",
     "                labels={'climate_region': 'Climate Region', 'outage_duration': 'Outage Duration (hours)'})\n",
     "bivariate2.show()\n",
-    "bivariate2.write_html(\"bivariate2.html\")"
+    "# bivariate2.write_html(\"bivariate2.html\")"
    ]
   },
   {
@@ -683,7 +803,7 @@
     "              title='Outage Duration by Cause Category Boxplot',\n",
     "              labels={'cause_category': 'Cause Category', 'outage_duration': 'Outage Duration (hours)'})\n",
     "bivariate3.show()\n",
-    "bivariate3.write_html(\"bivariate3.html\")"
+    "# bivariate3.write_html(\"bivariate3.html\")"
    ]
   },
   {
@@ -730,7 +850,7 @@
     "                title='Outage Duration by Cause Category Scatterplot',\n",
     "                labels={'cause_category': 'Cause Category', 'outage_duration': 'Outage Duration (hours)'})\n",
     "bivariate4.show()\n",
-    "bivariate4.write_html(\"bivariate4.html\")"
+    "# bivariate4.write_html(\"bivariate4.html\")"
    ]
   },
   {
@@ -751,9 +871,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>CAUSE.CATEGORY</th>\n",
+       "      <th>equipment failure</th>\n",
+       "      <th>fuel supply emergency</th>\n",
+       "      <th>intentional attack</th>\n",
+       "      <th>islanding</th>\n",
+       "      <th>public appeal</th>\n",
+       "      <th>severe weather</th>\n",
+       "      <th>system operability disruption</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CLIMATE.REGION</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Central</th>\n",
+       "      <td>293.14</td>\n",
+       "      <td>10035.25</td>\n",
+       "      <td>315.53</td>\n",
+       "      <td>125.33</td>\n",
+       "      <td>1410.00</td>\n",
+       "      <td>3238.30</td>\n",
+       "      <td>2469.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>East North Central</th>\n",
+       "      <td>26435.33</td>\n",
+       "      <td>27969.00</td>\n",
+       "      <td>2376.05</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>733.00</td>\n",
+       "      <td>4434.82</td>\n",
+       "      <td>2610.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Northeast</th>\n",
+       "      <td>216.67</td>\n",
+       "      <td>14629.57</td>\n",
+       "      <td>191.84</td>\n",
+       "      <td>881.00</td>\n",
+       "      <td>2655.00</td>\n",
+       "      <td>4342.68</td>\n",
+       "      <td>705.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Southwest</th>\n",
+       "      <td>113.80</td>\n",
+       "      <td>2018.00</td>\n",
+       "      <td>255.84</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>2275.00</td>\n",
+       "      <td>11572.90</td>\n",
+       "      <td>329.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West</th>\n",
+       "      <td>524.81</td>\n",
+       "      <td>5250.94</td>\n",
+       "      <td>857.68</td>\n",
+       "      <td>214.86</td>\n",
+       "      <td>2028.11</td>\n",
+       "      <td>2908.30</td>\n",
+       "      <td>356.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West North Central</th>\n",
+       "      <td>61.00</td>\n",
+       "      <td>3960.00</td>\n",
+       "      <td>23.50</td>\n",
+       "      <td>68.20</td>\n",
+       "      <td>439.50</td>\n",
+       "      <td>2442.50</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "CAUSE.CATEGORY      equipment failure  fuel supply emergency  \\\n",
+       "CLIMATE.REGION                                                 \n",
+       "Central                        293.14               10035.25   \n",
+       "East North Central           26435.33               27969.00   \n",
+       "Northeast                      216.67               14629.57   \n",
+       "...                               ...                    ...   \n",
+       "Southwest                      113.80                2018.00   \n",
+       "West                           524.81                5250.94   \n",
+       "West North Central              61.00                3960.00   \n",
+       "\n",
+       "CAUSE.CATEGORY      intentional attack  islanding  public appeal  \\\n",
+       "CLIMATE.REGION                                                     \n",
+       "Central                         315.53     125.33        1410.00   \n",
+       "East North Central             2376.05       1.00         733.00   \n",
+       "Northeast                       191.84     881.00        2655.00   \n",
+       "...                                ...        ...            ...   \n",
+       "Southwest                       255.84       2.00        2275.00   \n",
+       "West                            857.68     214.86        2028.11   \n",
+       "West North Central               23.50      68.20         439.50   \n",
+       "\n",
+       "CAUSE.CATEGORY      severe weather  system operability disruption  \n",
+       "CLIMATE.REGION                                                     \n",
+       "Central                    3238.30                        2469.73  \n",
+       "East North Central         4434.82                        2610.00  \n",
+       "Northeast                  4342.68                         705.06  \n",
+       "...                            ...                            ...  \n",
+       "Southwest                 11572.90                         329.22  \n",
+       "West                       2908.30                         356.41  \n",
+       "West North Central         2442.50                           0.00  \n",
+       "\n",
+       "[9 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Pivot Tables by Mean\n",
     "pivot_table = pd.pivot_table(\n",
@@ -765,8 +1040,7 @@
     "    fill_value=0              \n",
     ")\n",
     "pivot_table\n",
-    "\n",
-    "pivot_table.to_html(\"pivot_table.html\", index=False)"
+    "# print(pivot_table.to_markdown(index=False))"
    ]
   },
   {
@@ -864,7 +1138,7 @@
     "missingness1 = px.histogram(x=perm_diffs, nbins=30, title=f'Permutation Test for Missingness in OUTAGE.DURATION Depending on CAUSE.CATEGORY', labels={'value': 'Absolute Difference in Means'}, opacity=0.7)\n",
     "missingness1.add_vline(x=observed_diff, line_dash='dash', line_color='red', annotation_text='Observed Absolute Difference in Means')\n",
     "missingness1.show()\n",
-    "missingness1.write_html(\"missingness1.html\")\n",
+    "# missingness1.write_html(\"missingness1.html\")\n",
     "\n",
     "print(f\"Observed Absolute Difference in Means: {observed_diff}, P-Value: {p_value}\")"
    ]
@@ -917,7 +1191,7 @@
     "missingness2 = px.histogram(perm_diffs, nbins=30, title=f'Permutation Test for Missingness in OUTAGE.DURATION Depending on HURRICANE.NAMES', labels={'value': 'Absolute Difference in Means'}, opacity=0.7)\n",
     "missingness2.add_vline(x=observed_diff, line_dash='dash', line_color='red', annotation_text='Observed Absolute Difference in Means')\n",
     "missingness2.show()\n",
-    "missingness2.write_html(\"missingness2.html\")\n",
+    "# missingness2.write_html(\"missingness2.html\")\n",
     "\n",
     "print(f\"Observed Absolute Difference in Means: {observed_diff}, P-Value: {p_value}\")"
    ]
@@ -1002,7 +1276,7 @@
     "hypothesis_test_1.add_vline(x=observed_diff, line_dash=\"dash\", line_color=\"red\", annotation_text=\"Observed Difference\", annotation_position=\"top right\")\n",
     "hypothesis_test_1.update_layout(xaxis_title=\"Absolute Difference in Means\", yaxis_title=\"Frequency\", showlegend=False)\n",
     "hypothesis_test_1.show()\n",
-    "hypothesis_test_1.write_html(\"hypothesis_test_1.html\")\n",
+    "# hypothesis_test_1.write_html(\"hypothesis_test_1.html\")\n",
     "\n",
     "print(f\"Observed Absolute Difference in Means: {observed_diff}\")\n",
     "print(f\"P-value: {p_value}\")"
@@ -1023,7 +1297,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-31T23:36:28.666489Z",
      "start_time": "2019-10-31T23:36:28.664381Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1064,7 +1339,7 @@
     "\n",
     "hypothesis_test_2.update_layout(xaxis_title=\"Cause Category\", yaxis_title=\"Outage Duration (mins)\")\n",
     "hypothesis_test_2.show()\n",
-    "hypothesis_test_2.write_html(\"hypothesis_test_2.html\")"
+    "# hypothesis_test_2.write_html(\"hypothesis_test_2.html\")"
    ]
   },
   {
