Final Updated ipynb

--- a/DSC80_Final.ipynb
+++ b/DSC80_Final.ipynb
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        "[9 rows x 7 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,9 @@
    "metadata": {},
    "source": [
     "#### Hypothesis Test 1: Permutation Test for Cause Category and Outage Duration\n",
-    "- P-value"
+    "\n",
+    "##### Plot Interpretation:\n",
+    "The histogram that plots the empirical distribution of the absolute difference in means for CAUSE.CATEGORY and OUTAGE.DURATION is heavily right skewed. This shows that most of the permuted differences cluster mainly on the right, meaning that the test results in differences that are in majority small, with just a few differences that are larger occurring in the right tail. The observed difference is also in the far right of the histogram meaning that the observed difference is larger than most permuted differences that were computed. This diagram further shows that the observed difference is unlikely to be due to chance and that the CAUSE.CATEGORY truly does affect the OUTAGE.DURATION."
    ]
   },
   {
@@ -1347,10 +1349,6 @@
    "metadata": {},
    "source": [
     "#### Hypothesis Test 2: Kruskal-Wallis Test for Outage Duration Across Cause Categories \n",
-    "\n",
-    "For this hypothesis test:\n",
-    "- Null hypothesis (H0): The median outage duration is the same across all categories.\n",
-    "- Alternative Hypothesis (H1): At least one cause category has a significantly different median outage duration.\n",
     "\n",
     "##### Plot Interpretation:\n",
     "The plot above shows the distribution of outage durations by cause category, where a Kruskal-Wallis test was used to assess whether the duration of outages significantly varies across different causese. With the test statistic value of 700.61 and a p-value of 4.53e-148, which are extremely small, this suggests strong evidence against the null hypothesis. This indicates that different causes likely result in different outage durations. \n",
