--- a/DSC80_Final.ipynb
+++ b/DSC80_Final.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**Name(s)**: Ava Jeong and Charlene Hsu\n",
     "\n",
-    "**Website Link**: https://github.com/charl3n3hsu/DSC80_Final_Proj"
+    "**Website Link**: https://charl3n3hsu.github.io/Power_Outage_Causes/"
    ]
   },
   {
